--- a/src/index.html
+++ b/src/index.html
@@ -4,10 +4,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- <meta http-equiv="Content-Security-Policy" content="default-src 'none'"> -->
     <link rel="stylesheet" href="./styles.css">
     <title>Movie DB</title>
 </head>
 <body>
     <h1>Electron + Node JS + API REST</h1>
+
+    <div id="container"></div>
+    <br>
+    <button type="button" class="btn">GET DATA</button>
+
+    <script src="./renderer.js"></script>
 </body>
 </html>
