--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,47 +8,47 @@
     <!-- <meta http-equiv="Content-Security-Policy" content="default-src 'none'"> -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;400;700&family=Roboto:wght@300;400;700;900&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;400;700&family=Roboto:wght@300;400;700;900&display=swap"
+        rel="stylesheet">
+    <link rel="stylesheet" href="./bootstrap.min.css">
     <link rel="stylesheet" href="./styles.css">
     <title>Movie DB</title>
 </head>
 <body>
-    <header>
-        <nav>
-            <div class="hamburger hamburger--spring js-hamburger" id="hamburger">
-                <div class="hamburger-box">
-                    <div class="hamburger-inner"></div>
+    <nav class="navbar navbar-expand-md navbar-light bg-primary">
+        <div class="container-fluid">
+            <a class="navbar-brand text-light fw-bold" href="#">Noriega Movies</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
+                aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse d-md-flex justify-content-end m" id="navbarNavAltMarkup">
+                <div class="navbar-nav">
+                    <a class="nav-link active text-light" aria-current="page" href="#">Home</a>
+                    <a class="nav-link text-light" href="#">Popular</a>
+                    <a class="nav-link text-light" href="#">Ranking</a>
+                    <a class="nav-link text-light" href="#">Companys</a>
                 </div>
+                <form class="d-flex ms-4">
+                    <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                    <button class="btn btn-success" type="submit">Search</button>
+                </form>
             </div>
-            </div>
-            <div id="menu" class="hidden">
-                <div id="menu-left">The movie denc</div>
-                <div id="menu-right">
-                    <ul>
-                        <li>
-                            <a href="#">Home</a>
-                        </li>
-                        <li>
-                            <a href="#">Genders</a>
-                        </li>
-                        <li>
-                            <a href="#">Popular</a>
-                        </li>
-                        <li>
-                            <a href="#">Category</a>
-                        </li>
-                        <li>
-                            <a href="#">Companys</a>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-        </nav>
+        </div>
+    </nav>
 
-    <!-- <div id="containxer"></div> -->
-    <!-- <br> -->
-    <!-- <button type="button" class="btn">GET DATA</button> -->
+    <section class="container-fluid">
+        <div class="row"></div>
+    </section>
 
     <script src="./renderer.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
+        integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
+        integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13"
+        crossorigin="anonymous"></script>
 </body>
+
 </html>
